removing large files

--- a/notebooks/UniversalityClasses-BlueSky.ipynb
+++ b/notebooks/UniversalityClasses-BlueSky.ipynb
@@ -263,7 +263,7 @@
     "fig = plt.figure(figsize=(21,5))\n",
     "plt, fit_2, covar_2, spline_t2 = analyze(countries, country, startdate, datet_max, markers, plt)\n",
     "\n",
-    "x_p = np.linspace(0,2.5,1000000)\n",
+    "x_p = np.linspace(0,2.5,100000)\n",
     "y_p = interpolate.splev(x_p, spline_t2, der=0)\n",
     "y_d = interpolate.splev(x_p, spline_t2, der=1)\n",
     "data = np.vstack((x_p, y_p, y_d))\n",
