--- a/notebooks/DataScout-UniversalityClasses.ipynb
+++ b/notebooks/DataScout-UniversalityClasses.ipynb
@@ -6,10 +6,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "###########################################################################\n",
+    "# This notebook is authored by: Ayan Paul                                 #\n",
+    "# Date: January 2021                                                      #\n",
+    "# If you use this code or the results from this work please cite:         # \n",
+    "# Emergence of universality in the transmission dynamics of COVID-19      #\n",
+    "# Ayan Paul, Jayanta Kumar Bhattacharjee, Aksay Pal and Sagar Chakraborty #\n",
+    "# arXiv:2101.12556 (https://arxiv.org/abs/2101.12556)                     # \n",
+    "###########################################################################\n",
+    "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import datetime\n",
     "import matplotlib.pyplot as plt\n",
+    "import requests\n",
     "\n",
     "# links to the JHU GitHub\n",
     "jhu_confirmed = 'https://raw.githubusercontent.com/CSSEGISandData/COVID-19/master/csse_covid_19_data/csse_covid_19_time_series/time_series_covid19_confirmed_global.csv'\n",
@@ -67,6 +77,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Get the JHU data and note that Australia needs special aggregation\n",
     "confirmed = pd.read_csv(jhu_confirmed)\n",
     "confirmed_australia = confirmed[confirmed['Country/Region'] == 'Australia'].groupby('Country/Region', as_index=False).aggregate('sum')\n",
     "\n",
@@ -89,6 +100,7 @@
     "countries = pd.concat([countries, confirmed[confirmed['Country/Region'] == 'South Africa']])\n",
     "countries = pd.concat([countries, confirmed[confirmed['Country/Region'] == 'Turkey']])\n",
     "countries = pd.concat([countries, confirmed[confirmed['Country/Region'] == 'Russia']])\n",
+    "countries = pd.concat([countries, confirmed[confirmed['Country/Region'] == 'India']])\n",
     "countries = countries.drop(['Province/State'], axis=1)\n",
     "\n",
     "# Rename some countries\n",
@@ -103,10 +115,14 @@
    "outputs": [],
    "source": [
     "# The timeseries database\n",
-    "rki_df = pd.read_csv(incidence_data)\n",
+    "r = requests.get(incidence_data, params={\"url_only\": True})\n",
+    "j = r.json()\n",
+    "rki_df = pd.read_csv(j[\"url\"])\n",
     "\n",
     "# # This database is used to get the population data\n",
-    "lk_df = pd.read_csv(landkreis_data)\n",
+    "r = requests.get(landkreis_data, params={\"url_only\": True})\n",
+    "j = r.json()\n",
+    "lk_df = pd.read_csv(j[\"url\"])\n",
     "\n",
     "# Pivoting the data to the correct format and the adding the population to it\n",
     "rki_df['Meldedatum_datetime'] = pd.to_datetime(rki_df['Meldedatum'])\n",
@@ -210,13 +226,11 @@
     "enddate = '2020-12-31'\n",
     "t1_2 = 52\n",
     "datet1_2 = str(datetime.datetime.strptime(startdate, '%Y-%m-%d') + datetime.timedelta(days=t1_2))[:10]\n",
-    "# confirmed = pd.read_csv(jhu_confirmed)\n",
     "\n",
     "fig = plt.figure(figsize=(16,8))\n",
     "\n",
     "plt.subplot(2,2,1)\n",
     "plt = makeTSPlots(countries, countries_1, plt, startdate, enddate, True)\n",
-    "# plt.yscale('log')\n",
     "plt.ylabel(r'$dN(t)/dt$', fontsize=14)\n",
     "plt.title('Phase 1 of Type I', fontsize=16)\n",
     "plt.legend(countries_1, loc='upper left')\n",
@@ -226,7 +240,6 @@
     "\n",
     "plt.subplot(2,2,2)\n",
     "plt = makeTSPlots(countries, countries_2, plt, startdate, enddate, True)\n",
-    "# plt.yscale('log')\n",
     "plt.ylabel(r'$dN(t)/dt$', fontsize=14)\n",
     "plt.title('Phase 1 of Type II', fontsize=16)\n",
     "plt.legend(countries_2, loc='upper left')\n",
@@ -236,7 +249,6 @@
     "\n",
     "plt.subplot(2,2,3)\n",
     "plt = makeTSPlots(countries, countries_3, plt, startdate, enddate, True)\n",
-    "# plt.yscale('log')\n",
     "plt.ylabel(r'$dN(t)/dt$', fontsize=14)\n",
     "plt.title('States in the USA', fontsize=16)\n",
     "plt.legend(countries_3, loc='upper left')\n",
@@ -246,7 +258,6 @@
     "\n",
     "plt.subplot(2,2,4)\n",
     "plt = makeTSPlots(countries, countries_4, plt, startdate, enddate, True)\n",
-    "# plt.yscale('log')\n",
     "plt.ylabel(r'$dN(t)/dt$', fontsize=14)\n",
     "plt.title('States in Germany', fontsize=16)\n",
     "plt.legend(countries_4, loc='upper left')\n",
@@ -262,9 +273,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "uc19",
+   "display_name": "PyCharm (Tutorials)",
    "language": "python",
-   "name": "uc19"
+   "name": "pycharm-38c7cf03"
   },
   "language_info": {
    "codemirror_mode": {
@@ -276,7 +287,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
