--- a/notebooks/UniversalityClasses-AllModels.ipynb
+++ b/notebooks/UniversalityClasses-AllModels.ipynb
@@ -6,6 +6,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "###########################################################################\n",
+    "# This notebook is authored by: Ayan Paul                                 #\n",
+    "# Date: January 2021                                                      #\n",
+    "# If you use this code or the results from this work please cite:         # \n",
+    "# Emergence of universality in the transmission dynamics of COVID-19      #\n",
+    "# Ayan Paul, Jayanta Kumar Bhattacharjee, Aksay Pal and Sagar Chakraborty #\n",
+    "# arXiv:2101.12556 (https://arxiv.org/abs/2101.12556)                     # \n",
+    "###########################################################################\n",
+    "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -37,33 +46,113 @@
     "# The four ODEs being considered\n",
     "\n",
     "def ODE_BSM(x, t, beta, k, a):\n",
+    "    ''' ODE for Blue Sky model\n",
+    "        arguments:\n",
+    "            x: dependent variable\n",
+    "            t: independent variable\n",
+    "            beta: growth rate\n",
+    "            k: total capacity\n",
+    "            a: dispersion of capacity\n",
+    "        returns:\n",
+    "            the derivative dx/dt\n",
+    "    '''\n",
     "    return beta*x*(1 - x/k + a*x*x)\n",
     "\n",
     "def ODE_GRM(x, t, beta, k, p, a):\n",
+    "    ''' ODE for general Richards model\n",
+    "        arguments:\n",
+    "            x: dependent variable\n",
+    "            t: independent variable\n",
+    "            beta: growth rate\n",
+    "            k: total capacity\n",
+    "            p: exponent\n",
+    "            a: exponent\n",
+    "        returns:\n",
+    "            the derivative dx/dt\n",
+    "    '''\n",
     "    return beta*x**p*(1 - (x/k)**a)\n",
     "\n",
     "def ODE_GLM(x, t, beta, k, p):\n",
+    "    ''' ODE for general logistic model\n",
+    "        arguments:\n",
+    "            x: dependent variable\n",
+    "            t: independent variable\n",
+    "            beta: growth rate\n",
+    "            k: total capacity\n",
+    "            p: exponent\n",
+    "        returns:\n",
+    "            the derivative dx/dt\n",
+    "    '''\n",
     "    return ODE_GRM(x, t, beta, k, p, 1)\n",
     "\n",
     "def ODE_LM(x, t, beta, k):\n",
+    "    ''' ODE for logistic growth model\n",
+    "        arguments:\n",
+    "            x: dependent variable\n",
+    "            t: independent variable\n",
+    "            beta: growth rate\n",
+    "            k: total capacity\n",
+    "        returns:\n",
+    "            the derivative dx/dt\n",
+    "    '''\n",
     "    return ODE_GRM(x, t, beta, k, 1, 1)\n",
     "\n",
     "######################################################\n",
     "# Functions to solve ODEs\n",
     "\n",
     "def ODE_BSM_sol(t, x0, beta, k, a):\n",
+    "    ''' ODE solution for Blue Sky model\n",
+    "        arguments:\n",
+    "            t: independent variable\n",
+    "            x0: initial value of dependent variable\n",
+    "            beta: growth rate\n",
+    "            k: total capacity\n",
+    "            a: dispersion of capacity\n",
+    "        returns:\n",
+    "            numerical values of the solution to x\n",
+    "    '''\n",
     "    x = odeint(ODE_BSM, x0, t, args=(beta, k, a))\n",
     "    return x.reshape(1,-1)[0]\n",
     "\n",
     "def ODE_GRM_sol(t, x0, beta, k, p, a):\n",
+    "    ''' ODE solution for general Richards model\n",
+    "        arguments:\n",
+    "            t: independent variable\n",
+    "            x0: initial value of dependent variable\n",
+    "            beta: growth rate\n",
+    "            k: total capacity\n",
+    "            p: exponent\n",
+    "            a: exponent\n",
+    "        returns:\n",
+    "            numerical values of the solution to x\n",
+    "    '''\n",
     "    x = odeint(ODE_GRM, x0, t, args=(beta, k, p, a))\n",
     "    return x.reshape(1,-1)[0]\n",
     "\n",
     "def ODE_GLM_sol(t, x0, beta, k, p):\n",
+    "    ''' ODE solution for general logistic model\n",
+    "        arguments:\n",
+    "            t: independent variable\n",
+    "            x0: initial value of dependent variable\n",
+    "            beta: growth rate\n",
+    "            k: total capacity\n",
+    "            p: exponent\n",
+    "        returns:\n",
+    "            numerical values of the solution to x\n",
+    "    '''\n",
     "    x = odeint(ODE_GLM, x0, t, args=(beta, k, p))\n",
     "    return x.reshape(1,-1)[0]\n",
     "\n",
     "def ODE_LM_sol(t, x0, beta, k):\n",
+    "    ''' ODE solution for logistic growth model\n",
+    "        arguments:\n",
+    "            t: independent variable\n",
+    "            x0: initial value of dependent variable\n",
+    "            beta: growth rate\n",
+    "            k: total capacity\n",
+    "        returns:\n",
+    "            numerical values of the solution to x\n",
+    "    '''\n",
     "    x = odeint(ODE_LM, x0, t, args=(beta, k))\n",
     "    return x.reshape(1,-1)[0]\n",
     "\n",
@@ -71,18 +160,58 @@
     "# Functions to get the gradient of the solved ODEs\n",
     "\n",
     "def ODE_BSM_grad(t, x0, beta, k, a):\n",
+    "    ''' ODE solution for Blue Sky model\n",
+    "        arguments:\n",
+    "            t: independent variable\n",
+    "            x0: initial value of dependent variable\n",
+    "            beta: growth rate\n",
+    "            k: total capacity\n",
+    "            a: dispersion of capacity\n",
+    "        returns:\n",
+    "            numerical values of the derivative dx/dt\n",
+    "    '''\n",
     "    x = odeint(ODE_BSM, x0, t, args=(beta, k, a))\n",
     "    return ODE_BSM(x.reshape(1,-1)[0], t, beta, k, a)\n",
     "\n",
     "def ODE_GRM_grad(t, x0, beta, k, p, a):\n",
+    "    ''' ODE solution for general Richards model\n",
+    "        arguments:\n",
+    "            t: independent variable\n",
+    "            x0: initial value of dependent variable\n",
+    "            beta: growth rate\n",
+    "            k: total capacity\n",
+    "            p: exponent\n",
+    "            a: exponent\n",
+    "        returns:\n",
+    "            numerical values of the derivative dx/dt\n",
+    "    '''\n",
     "    x = odeint(ODE_GRM, x0, t, args=(beta, k, p, a))\n",
     "    return ODE_GRM(x.reshape(1,-1)[0], t, beta, k, p, a)\n",
     "\n",
     "def ODE_GLM_grad(t, x0, beta, k, p):\n",
+    "    ''' ODE solution for general logistic model\n",
+    "        arguments:\n",
+    "            t: independent variable\n",
+    "            x0: initial value of dependent variable\n",
+    "            beta: growth rate\n",
+    "            k: total capacity\n",
+    "            p: exponent\n",
+    "        returns:\n",
+    "            numerical values of the derivative dx/dt\n",
+    "    '''\n",
     "    x = odeint(ODE_GLM, x0, t, args=(beta, k, p))\n",
     "    return ODE_GLM(x.reshape(1,-1)[0], t, beta, k, p)\n",
     "\n",
     "def ODE_LM_grad(t, x0, beta, k):\n",
+    "    ''' ODE solution for logistic growth model\n",
+    "        arguments:\n",
+    "            t: independent variable\n",
+    "            x0: initial value of dependent variable\n",
+    "            beta: growth rate\n",
+    "            k: total capacity\n",
+    "        returns:\n",
+    "            numerical values of the derivative dx/dt\n",
+    "    '''\n",
     "    x = odeint(ODE_LM, x0, t, args=(beta, k))\n",
     "    return ODE_LM(x.reshape(1,-1)[0], t, beta, k)\n",
     "\n",
@@ -271,7 +400,6 @@
     "ax = fig.axes\n",
     "ax[1].set_ylim([-0.01,1.8])\n",
     "ax[0].set_ylim([-0.01,1.01])\n",
-    "# ax[2].set_ylim([-0.01,1.8])\n",
     "plt.suptitle('Type I transmission', fontsize=18)\n",
     "plt.tight_layout()\n",
     "plt.savefig('../plots/universal_1_allmodels.pdf', facecolor='white', dpi=300)\n",
@@ -315,9 +443,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "uc19",
+   "display_name": "PyCharm (Tutorials)",
    "language": "python",
-   "name": "uc19"
+   "name": "pycharm-38c7cf03"
   },
   "language_info": {
    "codemirror_mode": {
@@ -329,7 +457,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
