--- a/notebooks/UniversalityClasses-BlueSky.ipynb
+++ b/notebooks/UniversalityClasses-BlueSky.ipynb
@@ -6,6 +6,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "###########################################################################\n",
+    "# This notebook is authored by: Ayan Paul                                 #\n",
+    "# Date: January 2021                                                      #\n",
+    "# If you use this code or the results from this work please cite:         # \n",
+    "# Emergence of universality in the transmission dynamics of COVID-19      #\n",
+    "# Ayan Paul, Jayanta Kumar Bhattacharjee, Aksay Pal and Sagar Chakraborty #\n",
+    "# arXiv:2101.12556 (https://arxiv.org/abs/2101.12556)                     # \n",
+    "###########################################################################\n",
+    "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -292,9 +301,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "uc19",
+   "display_name": "PyCharm (Tutorials)",
    "language": "python",
-   "name": "uc19"
+   "name": "pycharm-38c7cf03"
   },
   "language_info": {
    "codemirror_mode": {
@@ -306,7 +315,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
